fixing alignment

--- a/engine/examples/css/style.css
+++ b/engine/examples/css/style.css
@@ -17,7 +17,7 @@ html, body {
 #logo {
     position: absolute;
     top: 50%;
-    left: calc(100% - 200px);
+    left: calc(50% + 100px);
     transform: translateX(-50%) translateY(-50%);
 }
 
